tests/sema/negative/vec_len_on_non_vec.nv
fn main() : void {
    let x : int = 1;
    print_int(vec_len(x));
    return;
}
